--- a/CR/CR.tex
+++ b/CR/CR.tex
@@ -10,7 +10,7 @@
 \usepackage{engrec,titlesec,lipsum,xcolor}
 \usepackage{fancybox}
 \usepackage[skins, most]{tcolorbox}
-\usepackage[bookmarks={true},bookmarksopen={true}, pdftitle={APP - Fil rouge}, pdfauthor={APProximatif}, pdfsubject={Arbres équilibres}]{hyperref}
+\usepackage[bookmarks={true},bookmarksopen={true}, pdftitle={APP - Fil rouge}, pdfauthor={APProximatif}, pdfsubject={Arbres équilibres AVL}]{hyperref}
 \usepackage{setspace}
 \usepackage{mathabx}
 \usepackage{multicol}
@@ -141,7 +141,7 @@
 
 
 \title{AAP - Fil Rouge : Compte rendu}
-\author{Maistret James, Thieffry \'Emile, CHEVALIER Romain, Feng Yanli \&  Hong Yutong}
+\author{Maistret James, Thieffry \'Emile, Chevalier Romain, Feng Yanli \&  Hong Yutong}
 \date{\today}
 
 \renewcommand{\thesection}{\arabic{section}}
