--- a/CR/CR.tex
+++ b/CR/CR.tex
@@ -249,7 +249,7 @@ On trouve en figure~\ref{fig:prog1_1} , les différentes étapes de construction
   \label{fig:restruc_pro2}
 \end{figure}
 
-
+\paragraph{Ajout dans les mailles}
 \subsubsection{Calcul des paramètres de l'arbre}
 \subsubsection{Recherche de mots}
 
