--- a/CR/CR.tex
+++ b/CR/CR.tex
@@ -228,7 +228,7 @@ On trouve en figure~\ref{fig:prog1_1} , les différentes étapes de construction
 
 \begin{figure}[p]
   \begin{center}
-    \includegraphics[scale=0.25]{Img_prog1/displayAVL_20.png}
+    \includegraphics[scale=0.25]{Img_prog1/displayAVL_20.eps}
   \end{center}
   \caption{Example arbre avec les 20 premiers prénoms de \texttt{PrenomsV1.txt}}
 \end{figure}
